Reduce idle database compute
